fix(aura): Aura 콜백·스트림 연동 개선
- Gateway: /api/synapse/internal/ 제외 경로 추가 (X-Tenant-ID 미필수)
- AuraCallbackPayload: @JsonIgnoreProperties(ignoreUnknown=true), caseId 무시
- LenientInstantDeserializer: createdAt 타임존 없는 ISO-8601 수용
- CaseAnalysisService: confidence JsonNode 사용, 202 응답 시 실패 처리 안함
- CaseAnalysisService: streamUrl Aura 기본값, 실패 시 BE 스트림
- GlobalExceptionHandler: HttpMessageNotReadableException 400 핸들러
- docs: AURA_CALLBACK_500_VERIFICATION_result, ANALYSIS_STREAM_END_CONTRACT

Co-authored-by: Cursor <cursoragent@cursor.com>